c2rust-transpile/tests/snapshots/snapshots__transpile@return_addr_helpers.c.2024.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/return_addr_helpers.2024.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
unsafe extern "C" {
    unsafe fn raw_addr() -> *mut ::core::ffi::c_void;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn extract() -> *mut ::core::ffi::c_void {
    return raw_addr();
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn frob() -> *mut ::core::ffi::c_void {
    return raw_addr();
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn discard_extract() {
    raw_addr();
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn discard_frob() {
    raw_addr();
}
