c2rust-transpile/tests/snapshots/snapshots__transpile@return_address.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/return_address.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[unsafe(no_mangle)]
pub unsafe extern "C" fn direct_caller() -> *mut ::core::ffi::c_void {
    return ::core::ptr::null_mut::<::core::ffi::c_void>();
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn deeper_caller() -> *mut ::core::ffi::c_void {
    return ::core::ptr::null_mut::<::core::ffi::c_void>();
}
